MAR-1809 Added unit-tests for the QuickProjectStart slice

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -420,6 +420,7 @@
         "items": {}
       }
     },
-    "WeCreateProjectsFor": {}
+    "WeCreateProjectsFor": {},
+    "QuickProjectStart": {}
   }
 }
