--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "snyk": "^1.563.0",
     "swiper": "^5.4.5",
     "vue-awesome-swiper": "^4.1.1",
+    "vue-disqus": "^4.0.1",
     "vue-embed-gist": "^1.1.0",
     "vue-lottie": "^0.2.1",
     "vue-parallax-js": "^0.2.3",
