MAR-1811 Added unit-tests for TehchnologiesAndTools slice

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -421,6 +421,7 @@
       }
     },
     "WeCreateProjectsFor": {},
-    "QuickProjectStart": {}
+    "QuickProjectStart": {},
+    "TechnologiesAndTools": {}
   }
 }
