MAR-1660 added function for get S3 link with life time

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,8 @@ NODE_DOMAIN=***
 
 # AWS
 NODE_S3_PUBLIC_URL=***
+NODE_S3_ACCESS_KEY_ID=***
+NODE_S3_SECRET_ACCESS_KEY=***
 
 # Emails
 NODE_EMAIL_HR=***
