MAR-1617. Fixed correctly setup Storybook

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -422,6 +422,11 @@
     },
     "WeCreateProjectsFor": {},
     "QuickProjectStart": {},
-    "TechnologiesAndTools": {}
+    "TechnologiesAndTools": {
+      "toolsGrid": {
+        "primary": {},
+        "items": {}
+      }
+    }
   }
 }
