--- a/package.json
+++ b/package.json
@@ -85,15 +85,15 @@
     "@babel/eslint-parser": "^7.13.10",
     "@babel/preset-env": "^7.11.5",
     "@babel/runtime-corejs3": "^7.14.9",
-    "@nuxtjs/storybook": "3.3.1",
-    "@storybook/vue": "^6.3.7",
+    "@nuxtjs/storybook": "^4.1.1",
+    "@storybook/vue": "^6.3.8",
     "@testing-library/vue": "^5.6.1",
     "@vue/test-utils": "^1.1.0",
     "async": "^3.2.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^25.5.1",
     "chalk": "^4.1.1",
-    "core-js": "^3.16.0",
+    "core-js": "^3.17.3",
     "cypress": "^7.7.0",
     "eslint": "^7.24.0",
     "eslint-config-airbnb-base": "^14.2.1",
