MAR-1617. Updated changes from develop

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -1,431 +1,9 @@
 {
   "client/prismicSlices/pageParts": {
-    "CardGridSlice": {
-      "cardGridWithList": {
-        "items": {
-          "title": {
-            "content": "Main title"
-          },
-          "description": {
-            "config": {
-              "patternType": "PARAGRAPH",
-              "blocks": 1
-            }
-          },
-          "list": {
-            "content": "Occaecat voluptate nostru, Velit esse incididunt, Lorem consequat culpa esse, Dolor occaecat proident"
-          },
-          "fullWidth": {
-            "content": false
-          }
-        },
-        "primary": {
-          "animation": {
-            "content": "none"
-          }
-        }
-      },
-      "default-slice": {
-        "primary": {
-          "animation": {
-            "content": "none"
-          }
-        }
-      },
-      "cardGridWithIcon": {
-        "primary": {},
-        "items": {}
-      },
-      "richTextCards": {
-        "primary": {},
-        "items": {
-          "content": {
-            "config": {
-              "patternType": "PARAGRAPH",
-              "blocks": 1
-            }
-          }
-        }
-      }
-    },
-    "CtaBannerSlice": {
-      "default": {
-        "primary": {
-          "name": {
-            "content": "f"
-          },
-          "animation": {
-            "content": "none"
-          }
-        }
-      }
-    },
-    "CustomerLogoSlice": {
-      "default": {
-        "primary": {
-          "animation": {
-            "content": "none"
-          }
-        },
-        "items": {}
-      }
-    },
-    "TextSlice": {
-      "default-slice": {
-        "primary": {
-          "text": {
-            "content": "A few listed projects to show the diversity of our community participant roster and some of the promising concepts that are emerging in development technologies."
-          },
-          "colorTheme": {
-            "content": "white"
-          },
-          "maxWidth": {
-            "content": "1028px"
-          }
-        }
-      },
-      "title": {
-        "primary": {
-          "title": {
-            "content": "Featured projects"
-          },
-          "colorTheme": {
-            "content": "white"
-          },
-          "maxWidth": {
-            "content": "1028px"
-          },
-          "size-xl": {
-            "content": "80-px"
-          },
-          "size-xs": {
-            "content": "60-px"
-          },
-          "size-lg": {
-            "content": "40-px"
-          },
-          "size-md": {
-            "content": "33-px"
-          },
-          "size-sm": {
-            "content": "16-px"
-          }
-        }
-      },
-      "titleText": {
-        "primary": {
-          "title": {
-            "content": "Featured projects"
-          },
-          "text": {
-            "content": "A few listed projects to show the diversity of our community participant roster and some of the promising concepts that are emerging in development technologies."
-          },
-          "colorTheme": {
-            "content": "white"
-          },
-          "maxWidth": {
-            "content": "1028px"
-          }
-        }
-      },
-      "titleTextButton": {
-        "primary": {
-          "buttonLink": {
-            "content": "https://maddevs.co/delivery-models.pdf"
-          },
-          "text": {
-            "content": "A few listed projects to show the diversity of our community participant roster and some of the promising concepts that are emerging in development technologies."
-          },
-          "title": {
-            "content": "Featured projects"
-          },
-          "buttonText": {
-            "content": "Get presentation"
-          },
-          "colorTheme": {
-            "content": "white"
-          },
-          "maxWidth": {
-            "content": "1028px"
-          }
-        }
-      },
-      "titleTextList": {
-        "primary": {
-          "title": {
-            "content": "Software <br /> development"
-          },
-          "text": {
-            "content": "A few listed projects to show the diversity of our community participant roster and some of the promising concepts that are emerging in development technologies."
-          },
-          "colorTheme": {
-            "content": "white"
-          },
-          "maxWidth": {
-            "content": "1028px"
-          }
-        },
-        "items": {}
-      },
-      "titleH5": {
-        "primary": {
-          "title": {
-            "content": "We encourage the best practices in sustainability"
-          }
-        }
-      },
-      "titleH5Text": {
-        "primary": {
-          "title": {
-            "content": "We encourage the best practices in sustainability"
-          },
-          "text": {
-            "content": "Mad Devs takes full responsibility for the projects we have been involved in. It includes not only the quality of a product but also the responsibility toward the environment and people.  Therefore, the environmental and social sustainability compliances form a crucial component of our business strategy. We are committed to comply with legal regulations and official requirements and encourage the best sustainability practices. We understand sustainability as a path to continuous improvement of our processes and services for the purposes of environmental protection, the provision of occupational health, and meeting safety requirements. "
-          }
-        }
-      },
-      "redTextSimpleText": {
-        "primary": {
-          "title": {
-            "content": "Our Primary Areas of Sustainable Enterprise"
-          },
-          "text": {
-            "content": "We build our sustainability efforts around three primary areas: social, economic, and ecological sustainability."
-          }
-        }
-      },
-      "redTextSimpleTextMd": {
-        "primary": {
-          "title": {
-            "content": "Our Primary Areas of Sustainable Enterprise"
-          },
-          "text": {
-            "content": "We build our sustainability efforts around three primary areas: social, economic, and ecological sustainability."
-          }
-        }
-      },
-      "simpleTextMedium": {
-        "primary": {
-          "text": {
-            "content": "We build our sustainability efforts around three primary areas: social, economic, and ecological sustainability."
-          }
-        }
-      },
-      "paragraph": {
-        "primary": {
-          "type": {
-            "content": "default"
-          },
-          "size-xs": {
-            "content": "32-px"
-          },
-          "size-xl": {
-            "content": "40-px"
-          },
-          "size-sm": {
-            "content": "16-px"
-          },
-          "size-md": {
-            "content": "21-px"
-          },
-          "size-lg": {
-            "content": "24-px"
-          }
-        }
-      }
-    },
-    "StartScreen": {
-      "default-slice": {
-        "primary": {
-          "title": {
-            "content": "Mad Devs Engineering Your Growth"
-          },
-          "image": {
-            "content": "https://d6xkme6dcvajw.cloudfront.net/images/OpenSource/png/programmer@2x.png"
-          },
-          "subtitle": {
-            "content": "Without empty words, here at Mad Devs we partner with projects where our teams thrive. Innovating solutions, carrying ownership, delivering sustainable value and celebrating successes — make a happy workplace, where things get done. "
-          },
-          "imageOpacity": {
-            "content": 1
-          },
-          "background": {
-            "content": "black"
-          }
-        }
-      }
-    },
-    "KeyMetricsSlice": {
-      "default-slice": {
-        "primary": {
-          "animation": {
-            "content": "none"
-          }
-        },
-        "items": {
-          "title": {
-            "content": "10M+"
-          },
-          "subtitle": {
-            "content": "US dollars raised by 5 customer startups  in 2019."
-          }
-        }
-      },
-      "secondVariation": {
-        "primary": {
-          "colorTheme": {
-            "content": "white"
-          }
-        },
-        "items": {}
-      },
-      "thirdVariation": {
-        "primary": {
-          "colorTheme": {
-            "content": "white"
-          }
-        },
-        "items": {}
-      }
-    },
-    "CreateProjectsSlice": {
-      "default-slice": {
-        "primary": {
-          "background": {
-            "content": "black"
-          },
-          "animation": {
-            "content": "none"
-          }
-        }
-      }
-    },
-    "SpacerSlice": {
-      "default-slice": {
-        "primary": {
-          "size-sm": {
-            "content": "20px"
-          },
-          "size-md": {
-            "content": "30px"
-          },
-          "size-lg": {
-            "content": "40px"
-          },
-          "size-xl": {
-            "content": "50px"
-          },
-          "default-size": {
-            "content": "100px"
-          }
-        }
-      }
-    },
-    "ButtonSlice": {
-      "default-slice": {
-        "primary": {
-          "text": {
-            "content": "Default red button"
-          },
-          "background": {
-            "content": "black"
-          },
-          "animation": {
-            "content": "none"
-          }
-        }
-      },
-      "outlinedButton": {
-        "primary": {
-          "text": {
-            "content": "Outlined button"
-          },
-          "animation": {
-            "content": "none"
-          }
-        }
-      },
-      "linkButton": {
-        "primary": {
-          "text": {
-            "content": "Link button"
-          },
-          "animation": {
-            "content": "none"
-          }
-        }
-      }
-    },
-    "TechnologiesSlice": {
-      "default-slice": {
-        "primary": {
-          "title": {
-            "content": "Technologies & Tools"
-          },
-          "animation": {
-            "content": "none"
-          }
-        }
-      }
-    },
-    "CustomerTestimonials": {
-      "default-slice": {
-        "primary": {
-          "title": {
-            "content": "Customer Testimonials"
-          },
-          "animation": {
-            "content": "none"
-          }
-        }
-      }
-    },
-    "CustomerRatesSlice": {
-      "default-slice": {
-        "primary": {},
-        "items": {}
-      }
-    },
-    "ProjectStartSlice": {
-      "default-slice": {
-        "primary": {
-          "background": {
-            "content": "black"
-          },
-          "colorTheme": {
-            "content": "white"
-          },
-          "title": {
-            "content": "Quick Project Start"
-          },
-          "animation": {
-            "content": "none"
-          }
-        }
-      }
-    },
-    "TeamCards": {
-      "default-slice": {
-        "primary": {
-          "animation": {
-            "content": "none"
-          }
-        },
-        "items": {}
-      }
-    },
-    "ContactsSlice": {
-      "default-slice": {
-        "primary": {},
-        "items": {}
-      }
-    },
-    "WeCreateProjectsFor": {},
-    "QuickProjectStart": {},
     "TechnologiesAndTools": {
       "toolsGrid": {
-        "primary": {},
-        "items": {}
+        "items": {},
+        "primary": {}
       }
     }
   }
