MAR-865 updated sep-analyzer.yam | Added env for prismic api url

--- a/.github/workflows/seo-analyzer.yml
+++ b/.github/workflows/seo-analyzer.yml
@@ -22,4 +22,5 @@ jobs:
     - run: npm run generate
     - run: npm run seo-analyze
       env:
+        NODE_PRISMIC_API: ${{ secrets.NODE_PRISMIC_API }}
         CI: true
