MAR-2068. Added new component & slice, divided by variations

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -253,6 +253,9 @@
             "content": "black"
           }
         }
+      },
+      "description": {
+        "primary": {}
       }
     },
     "KeyMetricsSlice": {
