MAR-1950 added envs for e2e ci

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -16,3 +16,6 @@ jobs:
           wait-on: 'http://localhost:3000'
           browser: chrome
           headless: true
+        env:
+          NODE_PRISMIC_API: ${{ secrets.NODE_PRISMIC_API }}
+          CI: true
