MAR-1950 updated e2e github action

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -11,11 +11,12 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
-          start: npm run dev
-          wait-on: 'http://localhost:3000'
-          wait-on-timeout: 120
           browser: chrome
           headless: true
+          start: npm run dev
+          wait-on: 'http://localhost:3000'
+          wait-on-timeout: 60
         env:
+          FF_ENVIRONMENT: development
           NODE_PRISMIC_API: ${{ secrets.NODE_PRISMIC_API }}
           CI: true
