MAR-1617-new. Added new slice and created component with styles

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -427,6 +427,11 @@
         "primary": {},
         "items": {}
       }
-    }
+    },
+    "SingleImage": {}
+  },
+  "_cts": {
+    "singleimage": {},
+    "custom-page": {}
   }
 }
