--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,9 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/test/unit/coverage/
-/test/e2e/reports/
+/tests/unit/coverage/
+/tests/e2e/reports/
+/tests/e2e/screenshots/
 selenium-debug.log
 /coverage
 
