--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -20,4 +20,4 @@ jobs:
           FF_ENVIRONMENT: development
           NODE_PRISMIC_API: ${{ secrets.NODE_PRISMIC_API }}
           CI: true
-          NODE_ENV: test
+          NODE_ENV: cypress
