--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -46,6 +46,9 @@
             }
           }
         }
+      },
+      "richTechCardsAnimations": {
+        "items": {}
       }
     },
     "CtaBannerSlice": {
