--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -49,6 +49,10 @@
       },
       "richTechCardsAnimations": {
         "items": {}
+      },
+      "richTextCardsAnimation": {
+        "items": {},
+        "primary": {}
       }
     },
     "CtaBannerSlice": {
