MAR-1617-new. Created new slice and Added component RichTextCardsBottmAnimation

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -53,6 +53,9 @@
       "richTextCardsAnimation": {
         "items": {},
         "primary": {}
+      },
+      "richTextCardsBottomAnimation": {
+        "items": {}
       }
     },
     "CtaBannerSlice": {
