MAR-2114. Fixed design problems

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -438,7 +438,11 @@
         "items": {}
       }
     },
-    "SingleImage": {}
+    "SingleImage": {
+      "default-slice": {
+        "primary": {}
+      }
+    }
   },
   "_cts": {
     "singleimage": {},
