MAR-2135. Created slice for video and added styles

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -442,10 +442,16 @@
       "default-slice": {
         "primary": {}
       }
+    },
+    "VideoSlice": {
+      "default-slice": {
+        "primary": {}
+      }
     }
   },
   "_cts": {
     "singleimage": {},
-    "custom-page": {}
+    "custom-page": {},
+    "video-block": {}
   }
 }
