MAR-2075 changed seo-analyze command

--- a/.github/workflows/seo-analyzer.yml
+++ b/.github/workflows/seo-analyzer.yml
@@ -23,4 +23,4 @@ jobs:
       env:
         NODE_PRISMIC_API: ${{ secrets.NODE_PRISMIC_API }}
         CI: true
-    - run: npm run seo-analyze
+    - run: node ./SEOAnalyzer/index.js
