--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,10 @@
 {
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./client/*"]
-    }
-  },
-  "include": ["client/**/*"],
-  "exclude": ["node_modules"],
+	"compilerOptions": {
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["./client/*"]
+		}
+	},
+	"include": ["client/**/*"],
+	"exclude": ["node_modules"]
 }
