--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "express": "^4.17.1",
     "form-data": "^4.0.0",
     "img-comparison-slider": "^7.2.0",
+    "lottie-web": "^5.7.13",
     "mobile-device-detect": "^0.4.3",
     "multer": "^1.4.2",
     "nuxt": "2.15.8",
