MAR-1933. Created PostsSectionSlice

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -499,6 +499,11 @@
           }
         }
       }
+    },
+    "PostsSectionSlice": {
+      "default-slice": {
+        "primary": {}
+      }
     }
   },
   "_cts": {
