MAR-1933. Added more props from prismic sm

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -502,7 +502,8 @@
     },
     "PostsSectionSlice": {
       "default-slice": {
-        "primary": {}
+        "primary": {},
+        "items": {}
       }
     }
   },
