Updated package-lock. Fixed eslint errors.

--- a/.eslintrc
+++ b/.eslintrc
@@ -108,7 +108,10 @@
         ],
         "jest/prefer-expect-assertions": "off",
         "jest/no-hooks": "off",
+        "jest/require-hook": "off",
+        "jest/prefer-to-be": "off",
         "jest/prefer-strict-equal": "off",
+        "jest/prefer-expect-resolves": "off",
         "jest/no-mocks-import": "off",
         "jest/lowercase-name": "off",
         "import/no-unresolved": "off",
