--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "npm run lint-vue-scss & npm run lint-scss & npm run lint-es ",
-    "lint-es": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint-es": "eslint -c .eslintrc --ext .js,.vue --ignore-path .gitignore .",
     "lint-vue-scss": "sass-lint-vue components",
     "lint-scss": "sass-lint client/assets/styles/*.scss --verbose",
     "precommit": "npm run lint",
