--- a/package.json
+++ b/package.json
@@ -53,10 +53,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "form-data": "^4.0.0",
+    "geoip-lite": "^1.4.2",
     "img-comparison-slider": "^7.2.0",
     "lottie-web": "^5.7.13",
     "mobile-device-detect": "^0.4.3",
     "multer": "^1.4.2",
+    "node-fetch": "^3.0.0",
     "nuxt": "2.15.8",
     "nuxt-i18n": "^6.28.0",
     "nuxt-lazy-load": "^1.2.6",
