--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Mad Devs",
   "author": "Mad Devs",
   "private": true,
+  "engines": {
+    "node": ">=15"
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
@@ -58,7 +61,7 @@
     "lottie-web": "^5.7.13",
     "mobile-device-detect": "^0.4.3",
     "multer": "^1.4.2",
-    "node-fetch": "^3.0.0",
+    "node-fetch": "^2.6.1",
     "nuxt": "2.15.8",
     "nuxt-i18n": "^6.28.0",
     "nuxt-lazy-load": "^1.2.6",
@@ -114,11 +117,11 @@
     "jest-canvas-mock": "^2.3.1",
     "jest-serializer-vue": "^2.0.2",
     "mkdirp": "^1.0.4",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.1",
     "regenerator-runtime": "^0.13.7",
     "sass-lint": "^1.13.1",
     "sass-lint-vue": "^0.4.0",
-    "sass-loader": "^7.3.1",
+    "sass-loader": "^10.1.1",
     "seo-analyzer": "^1.0.6",
     "vue-jest": "^3.0.7",
     "vue-loader": "15.9.6"
