--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/gtm": "^2.4.0",
     "@nuxtjs/prismic": "^1.3.1",
+    "@nuxtjs/recaptcha": "^1.0.4",
     "@nuxtjs/robots": "^2.4.2",
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/style-resources": "^1.2.0",
