MAR-2269 prepared lotti link slice, covered with tests

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -498,6 +498,13 @@
             "content": "devops-audit"
           }
         }
+      },
+      "gridLottieLink": {
+        "items": {
+          "lottie-animation": {
+            "content": "devops-audit"
+          }
+        }
       }
     },
     "PostsSectionSlice": {
