--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -505,6 +505,15 @@
         "primary": {},
         "items": {}
       }
+    },
+    "ImageSlice": {
+      "default-slice": {
+        "primary": {
+          "image": {
+            "content": "https://images.unsplash.com/photo-1437622368342-7a3d73a34c8f"
+          }
+        }
+      }
     }
   },
   "_cts": {
