--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Mad Devs",
   "private": true,
   "engines": {
-    "node": ">=15"
+    "node": ">=15 <17"
   },
   "scripts": {
     "dev": "nuxt",
