MAR-2426 added description with icon slice.

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -521,6 +521,16 @@
           }
         }
       }
+    },
+    "DescriptionSliceWithIcon": {
+      "default-slice": {
+        "items": {},
+        "primary": {
+          "maxWidth": {
+            "content": "816px"
+          }
+        }
+      }
     }
   },
   "_cts": {
