MAR-2427 created CaseList slice and FlexibleParagraph variation.

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -531,6 +531,15 @@
           }
         }
       }
+    },
+    "CaseListSlice": {
+      "default-slice": {
+        "items": {
+          "link": {
+            "content": "/clients/case-studies/veeqo/"
+          }
+        }
+      }
     }
   },
   "_cts": {
