MAR-2431 prepared link slice

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -540,6 +540,18 @@
           }
         }
       }
+    },
+    "NavLinkSlice": {
+      "default-slice": {
+        "primary": {
+          "animation": {
+            "content": "fade-down"
+          },
+          "background": {
+            "content": "white"
+          }
+        }
+      }
     }
   },
   "_cts": {
