MAR-2329 Created the AwardsSlice component

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -553,6 +553,12 @@
           }
         }
       }
+    },
+    "AwardsSlice": {
+      "default-slice": {
+        "primary": {},
+        "items": {}
+      }
     }
   },
   "_cts": {
