--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -19,5 +19,7 @@ jobs:
         env:
           FF_ENVIRONMENT: development
           NODE_PRISMIC_API: ${{ secrets.NODE_PRISMIC_API }}
+          RECAPTCHA_SITE_KEY: ${{ secrets.RECAPTCHA_SITE_KEY }}
+          RECAPTCHA_SECRET_KEY: ${{ secrets.RECAPTCHA_SECRET_KEY }}
           CI: true
           NODE_ENV: cypress
