--- a/.github/workflows/seo-analyzer.yml
+++ b/.github/workflows/seo-analyzer.yml
@@ -22,5 +22,7 @@ jobs:
     - run: npm run generate
       env:
         NODE_PRISMIC_API: ${{ secrets.NODE_PRISMIC_API }}
+        RECAPTCHA_SITE_KEY: ${{ secrets.RECAPTCHA_SITE_KEY }}
+        RECAPTCHA_SECRET_KEY: ${{ secrets.RECAPTCHA_SECRET_KEY }}
         CI: true
     - run: node ./SEOAnalyzer/index.js
