--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -559,6 +559,15 @@
         }
       }
     },
+    "CasesListSlice": {
+      "default-slice": {
+        "primary": {
+          "background": {
+            "content": "black"
+          }
+        }
+      }
+    },
     "AwardsSlice": {}
   },
   "_cts": {
