MAR-2447 Added the new variation of tools grid slice

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -436,6 +436,10 @@
       "toolsGrid": {
         "primary": {},
         "items": {}
+      },
+      "existingToolsGrid": {
+        "items": {},
+        "primary": {}
       }
     },
     "SingleImage": {
