MAR-2693. Created new slice EmbedSlice

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -572,7 +572,13 @@
         }
       }
     },
-    "AwardsSlice": {}
+    "AwardsSlice": {},
+    "EmbedSlice": {
+      "default-slice": {
+        "primary": {},
+        "items": {}
+      }
+    }
   },
   "_cts": {
     "singleimage": {},
