MAR-2693. Created new slice called Image with caption

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -578,6 +578,11 @@
         "primary": {},
         "items": {}
       }
+    },
+    "ImageWithCaption": {
+      "default-slice": {
+        "primary": {}
+      }
     }
   },
   "_cts": {
