MAR-2693. Fixed problems

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -242,6 +242,9 @@
             "content": "24-px"
           }
         }
+      },
+      "flexibleParagraph": {
+        "primary": {}
       }
     },
     "StartScreen": {
