MAR-2705. Created new slice TitleAndParagraphSlice

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -586,6 +586,24 @@
       "default-slice": {
         "primary": {}
       }
+    },
+    "TitleAndParagraphSlice": {
+      "default-slice": {
+        "primary": {
+          "title": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
+          },
+          "description": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
+          }
+        }
+      }
     }
   },
   "_cts": {
