--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "node": ">=15 <17"
   },
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
+    "dev": "nuxi dev",
+    "build": "nuxi build",
+    "start": "nuxi preview",
+    "generate": "nuxi generate",
     "lint": "npm run lint-vue-scss & npm run lint-scss & npm run lint-es ",
     "lint-es": "eslint -c .eslintrc --ext .js,.vue --ignore-path .gitignore .",
     "lint-vue-scss": "sass-lint-vue components",
@@ -62,7 +62,7 @@
     "mobile-device-detect": "^0.4.3",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
-    "nuxt": "2.15.8",
+    "nuxt-edge": "latest",
     "nuxt-i18n": "^6.28.0",
     "nuxt-lazy-load": "^1.2.6",
     "nuxt-sm": "0.0.8",
@@ -92,6 +92,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/runtime-corejs3": "^7.14.9",
     "@cypress/vue": "^2.2.3",
+    "@nuxt/bridge": "npm:@nuxt/bridge-edge@^3.0.0-27389502.88da719",
     "@nuxtjs/storybook": "3.3.1",
     "@storybook/vue": "6.1.21",
     "@testing-library/vue": "^5.6.1",
@@ -123,6 +124,7 @@
     "sass-lint-vue": "^0.4.0",
     "sass-loader": "^10.1.1",
     "seo-analyzer": "^2.0.0",
+    "std-env": "^3.0.1",
     "vue-jest": "^3.0.7",
     "vue-loader": "15.9.6"
   },
