--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@maddevs/mad-radiator": "1.17.5",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/gtm": "^2.4.0",
+    "@nuxtjs/i18n": "^7.2.0",
     "@nuxtjs/prismic": "^1.3.1",
     "@nuxtjs/robots": "^2.4.2",
     "@nuxtjs/sitemap": "^2.4.0",
@@ -59,7 +60,6 @@
     "lottie-web": "^5.8.1",
     "multer": "^1.4.2",
     "nuxt": "2.15.8",
-    "nuxt-i18n": "^6.28.0",
     "nuxt-lazy-load": "^1.2.6",
     "nuxt-sm": "0.0.8",
     "prismjs": "^1.24.1",
