--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "swiper": "^5.4.5",
     "vue-awesome-swiper": "^4.1.1",
     "vue-disqus": "^4.0.1",
+    "vue-lazy-hydration": "^2.0.0-beta.4",
     "vue-prism-editor": "^1.2.2",
     "vue-select": "^3.11.2",
     "vue-slicezone": "^0.1.0",
@@ -107,6 +108,7 @@
     "jest-canvas-mock": "^2.3.1",
     "jest-serializer-vue": "^2.0.2",
     "node-sass": "^6.0.1",
+    "nuxt-compress": "^5.0.0",
     "regenerator-runtime": "^0.13.7",
     "sass-lint": "^1.13.1",
     "sass-lint-vue": "^0.4.0",
