MAR-2918. Refactoring prismic Title component. Added anchor link to title.

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -119,6 +119,9 @@
           },
           "size-sm": {
             "content": "16-px"
+          },
+          "showAnchorLink": {
+            "content": false
           }
         }
       },
