--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
     "request": "^2.88.2",
     "sendpulse-api": "^1.1.4",
     "simplebar-vue": "^1.6.2",
-    "slice-machine-ui": "0.1.0",
     "snyk": "^1.717.0",
     "swiper": "^5.4.5",
     "uuid": "^8.3.2",
@@ -123,6 +122,7 @@
     "sass-lint-vue": "^0.4.0",
     "sass-loader": "^10.1.1",
     "seo-analyzer": "^2.0.0",
+    "slice-machine-ui": "^0.2.1",
     "vue-jest": "^3.0.7",
     "vue-loader": "15.9.6"
   },
