Added missing files

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "node": ">=15 <17"
   },
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build --modern=server",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
+    "dev": "nuxi dev",
+    "build": "nuxi build --modern=server",
+    "start": "nuxi preview",
+    "generate": "nuxi generate",
     "lint": "npm run lint-vue-scss & npm run lint-scss & npm run lint-es",
     "lint-es": "eslint -c .eslintrc --ext .js,.vue --ignore-path .gitignore .",
     "lint-vue-scss": "sass-lint-vue components",
@@ -20,7 +20,6 @@
     "heroku-postbuild": "npm run build",
     "heroku-cleanup": "cd ./client; ls | grep -v static | grep -v modules | xargs rm -rfv",
     "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect",
     "test": "npm run test:unit && npm run test:e2e",
     "test:unit": "node ./jest",
     "test:unit:node": "node ./jest -- --test=node",
@@ -60,8 +59,8 @@
     "form-data": "^4.0.0",
     "lottie-web": "^5.8.1",
     "multer": "^1.4.2",
-    "nuxt": "2.15.8",
     "nuxt-compress": "^5.0.0",
+    "nuxt-edge": "latest",
     "nuxt-lazy-load": "^1.2.6",
     "nuxt-sm": "0.0.8",
     "prismjs": "^1.24.1",
@@ -83,6 +82,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/runtime-corejs3": "^7.14.9",
     "@cypress/vue": "^2.2.3",
+    "@nuxt/bridge": "npm:@nuxt/bridge-edge@^3.0.0-27445576.02e683d",
     "@nuxtjs/storybook": "3.3.1",
     "@storybook/vue": "6.1.21",
     "@testing-library/vue": "^5.6.1",
@@ -114,6 +114,7 @@
     "sass-loader": "^10.1.1",
     "seo-analyzer": "^2.0.0",
     "slice-machine-ui": "^0.2.1",
+    "std-env": "^3.0.1",
     "vue-jest": "^3.0.7",
     "vue-loader": "15.9.6"
   },
