--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "scripts": {
     "dev": "nuxi dev",
-    "build": "nuxi build --modern=server",
+    "build": "nuxi build",
     "start": "nuxi preview",
+    "start-build": "NUXT_PORT=3000 NUXT_HOST=192.168.31.58 NITRO_SSL_CERT=$(cat localhost.crt) NITRO_SSL_KEY=$(cat localhost.key) node .output/server/index.mjs",
     "generate": "nuxi generate",
     "lint": "npm run lint-vue-scss & npm run lint-scss & npm run lint-es",
     "lint-es": "eslint -c .eslintrc --ext .js,.vue --ignore-path .gitignore .",
