MAR-2981. Fix Eslint warnings.

--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -60,3 +60,5 @@ rules:
   no-css-comments: 0
   no-url-protocols: 0
   no-url-domains: 0
+  mixins-before-declarations: false
+  variable-name-format: 'camelCase'
