--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build --modern=server",
-    "start": "nuxt start",
+    "start": "nuxt start --modern=server",
     "generate": "nuxt generate",
     "lint": "npm run lint-vue-scss & npm run lint-scss & npm run lint-es",
     "lint-es": "eslint -c .eslintrc --ext .js,.vue --ignore-path .gitignore .",
