--- a/package.json
+++ b/package.json
@@ -43,11 +43,12 @@
     "@nuxtjs/i18n": "^7.2.0",
     "@nuxtjs/prismic": "^1.3.1",
     "@nuxtjs/robots": "^2.4.2",
+    "@nuxtjs/sentry": "^5.1.7",
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/style-resources": "^1.2.0",
-    "@sentry/node": "^6.3.1",
-    "@sentry/tracing": "^6.2.3",
-    "@sentry/vue": "^6.3.1",
+    "@sentry/node": "^6.18.2",
+    "@sentry/tracing": "^6.18.2",
+    "@sentry/vue": "^6.18.2",
     "aos": "^2.3.4",
     "axios": "^0.21.3",
     "bowser": "^2.11.0",
@@ -85,6 +86,7 @@
     "@babel/runtime-corejs3": "^7.14.9",
     "@cypress/vue": "^2.2.3",
     "@nuxtjs/storybook": "3.3.1",
+    "@sentry/webpack-plugin": "^1.18.8",
     "@storybook/vue": "6.1.21",
     "@testing-library/vue": "^5.6.1",
     "@vue/cli-plugin-e2e-cypress": "^4.5.13",
