--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -613,6 +613,17 @@
           }
         }
       }
+    },
+    "TextList": {
+      "default-slice": {
+        "items": {},
+        "primary": {}
+      }
+    },
+    "CardWithImageSlice": {
+      "default-slice": {
+        "primary": {}
+      }
     }
   },
   "_cts": {
