MAR-2933. Redesign cards with image. Replaced a regular text field with a field with a title selection.

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -625,7 +625,14 @@
     },
     "CardWithImageSlice": {
       "default-slice": {
-        "primary": {}
+        "primary": {
+          "title": {
+            "config": {
+              "patternType": "HEADING",
+              "blocks": 1
+            }
+          }
+        }
       }
     }
   },
