--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -269,6 +269,22 @@
             "content": "black"
           }
         }
+      },
+      "startScreenImageRightAndButton": {
+        "primary": {
+          "title": {
+            "config": {
+              "patternType": "HEADING",
+              "blocks": 1
+            }
+          },
+          "subtitle": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
+          }
+        }
       }
     },
     "KeyMetricsSlice": {
