MAR-3063. Created new slice CardsWithIcon and redesigned second variation StartScreen.

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -650,6 +650,19 @@
           }
         }
       }
+    },
+    "CardsWithIcon": {
+      "default-slice": {
+        "primary": {},
+        "items": {
+          "title": {
+            "config": {
+              "patternType": "HEADING",
+              "blocks": 1
+            }
+          }
+        }
+      }
     }
   },
   "_cts": {
