MAR-3063. Created FormSlice for Ebook.

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -663,6 +663,18 @@
           }
         }
       }
+    },
+    "FormSlice": {
+      "default-slice": {
+        "primary": {
+          "title": {
+            "config": {
+              "patternType": "HEADING",
+              "blocks": 1
+            }
+          }
+        }
+      }
     }
   },
   "_cts": {
