MAR-3063. Created variation for PostsSectionSlice for Ebook.

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -537,6 +537,16 @@
       "default-slice": {
         "primary": {},
         "items": {}
+      },
+      "ebookPostsSectionSlice": {
+        "primary": {
+          "title": {
+            "config": {
+              "patternType": "HEADING",
+              "blocks": 1
+            }
+          }
+        }
       }
     },
     "ImageSlice": {
