--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -685,6 +685,19 @@
           }
         }
       }
+    },
+    "EbookPageCardsSlice": {
+      "default-slice": {
+        "primary": {
+          "title": {
+            "config": {
+              "patternType": "HEADING",
+              "blocks": 1
+            }
+          }
+        },
+        "items": {}
+      }
     }
   },
   "_cts": {
