--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "heroku-cleanup": "cd ./client; ls | grep -v static | grep -v modules | xargs rm -rfv",
     "snyk-protect": "snyk protect",
     "prepare": "npm run snyk-protect",
-    "test": "npm run test:unit && npm run test:e2e",
+    "test": "npm run test:unit",
     "test:unit": "node ./jest",
     "test:unit:node": "node ./jest -- --test=node",
     "test:unit:browser": "node ./jest -- --test=browser",
