--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,11 @@ NODE_PRISMIC_API=***
 # Domain
 NODE_DOMAIN=***
 
+# Host
+HOST=127.0.0.1
+
 # AWS
+NODE_AWS_URL=***
 NODE_S3_PUBLIC_URL=***
 NODE_S3_ACCESS_KEY_ID=***
 NODE_S3_SECRET_ACCESS_KEY=***
@@ -24,10 +28,14 @@ NODE_S3_SECRET_ACCESS_KEY=***
 NODE_EMAIL_HR=***
 NODE_EMAIL_CONTACT=***
 NODE_EMAIL_MARKETING=***
+NODE_EMAIL_CV=***
 
 # Sentry
 NODE_SENTRY_DSN=***
 NODE_SENTRY_DSN_FRONT=***
+SENTRY_ORG=***
+SENTRY_PROJECT=***
+SENTRY_AUTH_TOKEN=***
 
 # Feature flags environment
 FF_ENVIRONMENT=development
@@ -46,9 +54,6 @@ NODE_HUNTFLOW_RESERVE_VACANCY_ID=
 
 # Cypress
 NODE_CYPRESS_BASE_URL=
-
-# Environment
-NODE_ENV=development
 
 #IP
 NODE_IP_INFO_TOKEN=
