MAR-3089. Created Ebooks list slice. Created Ebook Filter component. Create reusable UIPagination component.

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -698,6 +698,12 @@
         },
         "items": {}
       }
+    },
+    "EbooksWithFilterSlice": {
+      "default-slice": {
+        "primary": {},
+        "items": {}
+      }
     }
   },
   "_cts": {
