MAR-3075. Added authorPage silce, redirects to blog/authors, API and storage basic methods to receive all authors with posts count and tags.

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -698,6 +698,11 @@
         },
         "items": {}
       }
+    },
+    "AuthorsListSlice": {
+      "default-slice": {
+        "primary": {}
+      }
     }
   },
   "_cts": {
