MAR-3212. Created new variation GridWithAnimationOptionSlice.

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -531,6 +531,9 @@
             "content": "devops-audit"
           }
         }
+      },
+      "gridWithAnimationOptionSlice": {
+        "items": {}
       }
     },
     "PostsSectionSlice": {
