--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "snyk": "^1.717.0",
     "vue-awesome-swiper": "^4.1.1",
     "vue-disqus": "^4.0.1",
+    "vue-gtag": "1.16.1",
     "vue-lazy-hydration": "^2.0.0-beta.4",
     "vue-prism-editor": "^1.2.2",
     "vue-select": "^3.11.2",
