MAR-3173. Created Success and FAQ page with UIAccordion. Create protected path to success and faq page.

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -712,6 +712,26 @@
       "default-slice": {
         "primary": {}
       }
+    },
+    "AccordionSlice": {
+      "default-slice": {
+        "primary": {
+          "mainTitle": {
+            "config": {
+              "patternType": "HEADING",
+              "blocks": 1
+            }
+          }
+        },
+        "items": {
+          "answer": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
+          }
+        }
+      }
     }
   },
   "_cts": {
